--- a/styles/style.css
+++ b/styles/style.css
@@ -35,9 +35,6 @@
   font-weight: 600;
   max-width: 730px;
   z-index: 2;
-}
-
-.header__title_place {
   margin: auto 0;
   padding-left: 64px;
 }
@@ -48,9 +45,6 @@
   font-weight: normal;
   max-width: 388px;
   z-index: 2;
-}
-
-.header__subtitle_place {
   position: absolute;
   margin: 0;
   left: 64px;
@@ -65,10 +59,9 @@
 .header__main-illustration {
   width: 765px;
   height: 608px;
+  object-fit: cover;
+  object-position: center;
   z-index: 1;
-}
-
-.header__main-illustration_place {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -78,9 +71,6 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-}
-
-.header__square-pic_place {
   position: absolute;
   top: 64px;
   right: 0;
@@ -93,8 +83,7 @@
 .description {
   display: flex;
   width: 80%;
-  margin: auto;
-  padding: 100px 0 0;
+  margin: 100px auto;
 }
 
 .two-columns {
@@ -138,8 +127,7 @@
 .digits {
   display: flex;
   width: 80%;
-  margin: auto;
-  padding: 100px 0;
+  margin: 100px auto;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -151,6 +139,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  z-index: 2;
 }
 
 .section-subtitle {
@@ -159,6 +148,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .table {
@@ -189,13 +179,13 @@
   font-weight: normal;
 }
 
+.table__text:last-of-type {
+  margin: 0;
+}
+
 
 /* Feynman*/
 .feynman {
-  background-image: url(/images/feynman.png);
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-size: 867px 637px;
   padding-top: 100px;
   min-height: 790px;
   text-align: center;
@@ -209,6 +199,8 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
+  position: inherit;
+  z-index: 2;
 }
 
 .feynman__subtitle {
@@ -216,6 +208,8 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  position: inherit;
+  z-index: 2;
 }
 
 .feynman__link {
@@ -227,6 +221,17 @@
   font-weight: normal;
   text-decoration: none;
   color: #2f80ed;
+}
+
+.feynman__image {
+  width: 867px;
+  height: 637px;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  bottom: 0;
 }
 
 
@@ -247,20 +252,29 @@
 .table__cell_theme_dark {
   width: 200px;
   margin-top: 80px;
+  letter-spacing: normal;
+}
+
+.table__cell_theme_dark:nth-child(9) {
+  letter-spacing: -1px;
 }
 
 .kaufman__triangle {
   width: 877px;
   height: 877px;
+  background-image: url(/images/kaufman-triangle.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   position: absolute;
   right: -210px;
   top: 0;
+  z-index: 1;
 }
 
 
 /* Footer*/
 .footer {
-  margin: auto;
   color: white;
   background-color: #1f1f1f;
 }
@@ -299,7 +313,6 @@
   margin: 0 0 16px;
   display: flex;
   flex-direction: column;
-
 }
 
 .footer__column-link {
@@ -307,11 +320,12 @@
   color: white;
   line-height: 30px;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  object-fit: cover;
   padding-right: 10px;
 }
